--- a/index.html
+++ b/index.html
@@ -5,44 +5,63 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dia A Dia | Inicio</title>
+
+    <!-- CSS Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+    <!-- Estilos CSS -->
     <link rel="stylesheet" href="estilos.css">
+    <!-- Favicon -->
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+
+    <title>Dia A Dia | Inicio</title>
+
 </head>
 
 <body>
     <!-- HEADER -->
     <header>
-        <nav>
-            <ul>
-                <li class="link-activo">
-                    <a href="#">Inicio</a>
-                </li>
-                <li>
-                    <a href="pages/menu.html">Menú</a>
-                </li>
-                <li>
-                    <a href="pages/servicios.html">Servicios</a>
-                </li>
-                <li>
-                    <a href="#" id="logo">
-                        <img src="img/logo.png" alt="Logo de mi página">
-                    </a>
-                </li>
-                <li>
-                    <a href="pages/blog.html">Blog</a>
-                </li>
-                <li>
-                    <a href="pages/nosotros.html">Nosotros</a>
-                </li>
-                <li>
-                    <a href="pages/contacto.html">Contacto</a>
-                </li>
-            </ul>
+        <!-- Navbar Bootstrap -->
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" id="logo" href="#">
+                <img src="img/logo.png" alt="Logo de mi página">
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="container-fluid">
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item link-activo">
+                            <a href="#">Inicio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="pages/menu.html">Menú</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="pages/servicios.html">Servicios</a>
+                        </li>
+                        <li>
+                        </li>
+                        <li class="nav-item">
+                            <a href="pages/blog.html">Blog</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="pages/nosotros.html">Nosotros</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="pages/contacto.html">Contacto</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </nav>
         <!-- Portada -->
         <div id="portada">
-            <div class="flexbox-columna">
+            <div class="flexbox-columna centrado-movil">
                 <h1>Te hacemos la vida más fácil!</h1>
                 <div>
                     <p>¿Querés comer rico y sano, sin preocuparte por el tiempo?</p>
@@ -63,25 +82,27 @@
     <main>
         <!-- Primer sección -->
         <section id="primer-seccion">
-            <div class="soluciones-fondo">
-                <h2>Soluciones gastronómicas</h2>
-            </div>
-            <div class="articulos-primer-seccion">
-                <article id="primer-articulo">
-                    <a href="">
-                        <h2>Viandas individuales</h2>
-                    </a>
-                </article>
-                <article id="segundo-articulo">
-                    <a href="">
-                        <h2>Viandas para empresas</h2>
-                    </a>
-                </article>
-                <article id="tercer-articulo">
-                    <a href="">
-                        <h2>Servicio de catering</h2>
-                    </a>
-                </article>
+            <div class="centrado-movil">
+                <div class="soluciones-fondo">
+                    <h2>Soluciones gastronómicas</h2>
+                </div>
+                <div class="articulos-primer-seccion">
+                    <article id="primer-articulo">
+                        <a href="">
+                            <h2>Viandas individuales</h2>
+                        </a>
+                    </article>
+                    <article id="segundo-articulo">
+                        <a href="">
+                            <h2>Viandas para empresas</h2>
+                        </a>
+                    </article>
+                    <article id="tercer-articulo">
+                        <a href="">
+                            <h2>Servicio de catering</h2>
+                        </a>
+                    </article>
+                </div>
             </div>
         </section>
         <!-- Fin primer sección -->
@@ -123,7 +144,7 @@
             </article>
 
             <!-- Formulario Newsletter -->
-            <form action="#" method="post" class="flexbox-columna">
+            <form action="#" method="post" class="flexbox-columna centrado-movil">
                 <label for="id-nombre">Nombre</label>
                 <input type="text" id="id-nombre" class="input-texto">
                 <label for="id-mail">Mail</label>
@@ -143,7 +164,7 @@
     <footer>
         <img src="img/logo-negro-chico.png" alt="">
         <div>
-            <h3>Día A Día</h3>
+            <h5>Día A Día</h5>
             <ul>
                 <li>
                     <a href="">Nosotros</a>
@@ -154,7 +175,7 @@
             </ul>
         </div>
         <div>
-            <h3>Compras</h3>
+            <h5>Compras</h5>
             <ul>
                 <li>
                     <a href="">Como comprar</a>
@@ -168,7 +189,7 @@
             </ul>
         </div>
         <div>
-            <h3>Mi cuenta</h3>
+            <h5>Mi cuenta</h5>
             <ul>
                 <li>
                     <a href="">Acceder</a>
@@ -179,7 +200,7 @@
             </ul>
         </div>
         <div>
-            <h3>Seguinos en nuestras redes</h3>
+            <h5>Seguinos en nuestras redes</h5>
             <div id="contenedor-redes">
                 <a href="">
                     <img src="img/facebook.png" alt="Logo de Facebook">
@@ -197,6 +218,14 @@
     <a href="#" id="logo-whatsapp">
         <img src="img/whatsapp.png" alt="">
     </a>
+
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+        integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+        integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous">
+    </script>
 </body>
 
 
