--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -5,40 +5,59 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dia A Dia | Contacto</title>
+
+    <!-- CSS Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+    <!-- Estilos CSS -->
     <link rel="stylesheet" href="../estilos.css">
+    <!-- Favicon -->
     <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
+
+    <title>Dia A Dia | Contacto</title>
+
 </head>
 
 <body>
     <!-- HEADER -->
     <header>
-        <nav>
-            <ul>
-                <li>
-                    <a href="../index.html">Inicio</a>
-                </li>
-                <li>
-                    <a href="menu.html">Menú</a>
-                </li>
-                <li>
-                    <a href="servicios.html">Servicios</a>
-                </li>
-                <li>
-                    <a href="../index.html" id="logo">
-                        <img src="../img/logo.png" alt="Logo de mi página">
-                    </a>
-                </li>
-                <li>
-                    <a href="blog.html">Blog</a>
-                </li>
-                <li>
-                    <a href="nosotros.html">Nosotros</a>
-                </li>
-                <li class="link-activo">
-                    <a href="#">Contacto</a>
-                </li>
-            </ul>
+        <!-- Navbar Bootstrap -->
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" id="logo" href="#">
+                <img src="../img/logo.png" alt="Logo de mi página">
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="container-fluid">
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a href="../index.html">Inicio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="menu.html">Menú</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="servicios.html">Servicios</a>
+                        </li>
+                        <li>
+                        </li>
+                        <li class="nav-item">
+                            <a href="blog.html">Blog</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="nosotros.html">Nosotros</a>
+                        </li>
+                        <li class="nav-item link-activo">
+                            <a href="#">Contacto</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </nav>
     </header>
     <!-- FIN DEL HEADER -->
@@ -49,7 +68,7 @@
             <h1>Contactanos</h1>
         </section>
         <section id="segunda-seccion-contacto">
-            <div class="centrado-grande">
+            <div class="centrado-grande centrado-movil">
                 <div id="div-contacto">
                     <h2>Contacto</h2>
                     <p> <img src="../img/ubicacion.png" alt=""> Montevideo, Uruguay</p>
@@ -104,7 +123,7 @@
     <footer>
         <img src="../img/logo-negro-chico.png" alt="">
         <div>
-            <h3>Día A Día</h3>
+            <h5>Día A Día</h5>
             <ul>
                 <li>
                     <a href="">Nosotros</a>
@@ -115,7 +134,7 @@
             </ul>
         </div>
         <div>
-            <h3>Compras</h3>
+            <h5>Compras</h5>
             <ul>
                 <li>
                     <a href="">Como comprar</a>
@@ -129,7 +148,7 @@
             </ul>
         </div>
         <div>
-            <h3>Mi cuenta</h3>
+            <h5>Mi cuenta</h5>
             <ul>
                 <li>
                     <a href="">Acceder</a>
@@ -140,7 +159,7 @@
             </ul>
         </div>
         <div>
-            <h3>Seguinos en nuestras redes</h3>
+            <h5>Seguinos en nuestras redes</h5>
             <div id="contenedor-redes">
                 <a href="">
                     <img src="../img/facebook.png" alt="Logo de Facebook">
@@ -155,6 +174,14 @@
         </div>
     </footer>
     <!-- FIN DEL FOOTER -->
+
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+        integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+        integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous">
+    </script>
 </body>
 
 </html>
