--- a/pages/menu.html
+++ b/pages/menu.html
@@ -5,40 +5,59 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dia A Dia | Menú</title>
+
+    <!-- CSS Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+    <!-- Estilos CSS -->
     <link rel="stylesheet" href="../estilos.css">
+    <!-- Favicon -->
     <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
+
+    <title>Dia A Dia | Menú</title>
+
 </head>
 
 <body>
     <!-- HEADER -->
     <header>
-        <nav>
-            <ul>
-                <li>
-                    <a href="../index.html">Inicio</a>
-                </li>
-                <li class="link-activo">
-                    <a href="#">Menú</a>
-                </li>
-                <li>
-                    <a href="servicios.html">Servicios</a>
-                </li>
-                <li>
-                    <a href="../index.html" id="logo">
-                        <img src="../img/logo.png" alt="Logo de mi página">
-                    </a>
-                </li>
-                <li>
-                    <a href="blog.html">Blog</a>
-                </li>
-                <li>
-                    <a href="nosotros.html">Nosotros</a>
-                </li>
-                <li>
-                    <a href="contacto.html">Contacto</a>
-                </li>
-            </ul>
+        <!-- Navbar Bootstrap -->
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" id="logo" href="#">
+                <img src="../img/logo.png" alt="Logo de mi página">
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="container-fluid">
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a href="../index.html">Inicio</a>
+                        </li>
+                        <li class="nav-item link-activo">
+                            <a href="#">Menú</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="servicios.html">Servicios</a>
+                        </li>
+                        <li>
+                        </li>
+                        <li class="nav-item">
+                            <a href="blog.html">Blog</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="nosotros.html">Nosotros</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="contacto.html">Contacto</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </nav>
     </header>
     <!-- FIN DEL HEADER -->
@@ -67,109 +86,58 @@
         </section>
         <!-- Fin primer sección -->
 
-        <h1>Nuestro Menú semanal</h1>
-        <h2>Lunes</h2>
-        <figure>
-            <img src="" alt="">
-        </figure>
-        <h3>Nombre del producto</h3>
-        <p>Descripción del producto</p>
-        <hr>
+        <!-- Segunda sección -->
+        <section id="segunda-seccion-menu">
+            <h1>Nuestro Menú semanal</h1>
+            <div>
+                <div>
+                    <h2>Lunes</h2>
+                    <figure>
+                        <img src="" alt="">
+                    </figure>
+                    <h3>Nombre del producto</h3>
+                    <p>Descripción del producto</p>
+                </div>
 
-        <h2>Martes</h2>
-        <figure>
-            <img src="" alt="">
-        </figure>
-        <h3>Nombre del producto</h3>
-        <p>Descripción del producto</p>
-        <hr>
+                <div>
+                    <h2>Martes</h2>
+                    <figure>
+                        <img src="" alt="">
+                    </figure>
+                    <h3>Nombre del producto</h3>
+                    <p>Descripción del producto</p>
+                </div>
 
-        <h2>Miércoles</h2>
-        <figure>
-            <img src="" alt="">
-        </figure>
-        <h3>Nombre del producto</h3>
-        <p>Descripción del producto</p>
-        <hr>
+                <div>
+                    <h2>Miércoles</h2>
+                    <figure>
+                        <img src="" alt="">
+                    </figure>
+                    <h3>Nombre del producto</h3>
+                    <p>Descripción del producto</p>
+                </div>
 
-        <h2>Jueves</h2>
-        <figure>
-            <img src="" alt="">
-        </figure>
-        <h3>Pasta rellena</h3>
-        <p>La pasta rellena es uno de los platos más sabrosos y van con todo. En nuestro menú te ofrecemos ravioles,
-            sorrentinos, ñoquis o cappelletiis, con variados rellenos</p>
-        <table>
-            <thead>
-                <tr>
-                    <th>Producto</th>
-                    <th>Relleno</th>
-                    <th>Precio porción</th>
-                    <th>Precio porción doble</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>Ñoquis</td>
-                    <td>
-                        <ol>
-                            <li>Jamón & Queso</li>
-                            <li>Calabaza & Nuez </li>
-                        </ol>
-                    </td>
-                    <td>$200</td>
-                    <td>$350</td>
-                </tr>
-                <tr>
-                    <td>Ravioles</td>
-                    <td>
-                        <ol>
-                            <li>Jamón & Queso</li>
-                            <li>Calabaza & Nuez </li>
-                            <li>Espinaca & Queso</li>
-                        </ol>
-                    </td>
-                    <td>$250</td>
-                    <td>$400</td>
-                </tr>
-                <tr>
-                    <td>Cappellettis</td>
-                    <td>
-                        <ol>
-                            <li>Jamón & Queso</li>
-                            <li>Calabaza</li>
-                            <li>Espinaca</li>
-                            <li>Carne</li>
-                        </ol>
-                    </td>
-                    <td>$250</td>
-                    <td>$400</td>
-                </tr>
-                <tr>
-                    <td>Sorrentinos</td>
-                    <td>
-                        <ol>
-                            <li>Jamón & Queso</li>
-                            <li>Calabaza & Nuez </li>
-                            <li>Espinaca & Queso</li>
-                            <li>Salmón</li>
-                            <li>Champiñones & Parmesano</li>
-                            <li>Pollo</li>
-                        </ol>
-                    </td>
-                    <td>$300</td>
-                    <td>$500</td>
-                </tr>
-            </tbody>
-        </table>
-        <hr>
+                <div>
+                    <h2>Jueves</h2>
+                    <figure>
+                        <img src="" alt="">
+                    </figure>
+                    <h3>Pasta rellena</h3>
+                    <p>La pasta rellena es uno de los platos más sabrosos y van con todo. En nuestro menú te ofrecemos
+                        ravioles,
+                        sorrentinos, ñoquis o cappelletiis, con variados rellenos</p>
+                </div>
 
-        <h2>Viernes</h2>
-        <figure>
-            <img src="" alt="">
-        </figure>
-        <h3>Nombre del producto</h3>
-        <p>Descripción del producto</p>
+                <div>
+                    <h2>Viernes</h2>
+                    <figure>
+                        <img src="" alt="">
+                    </figure>
+                    <h3>Nombre del producto</h3>
+                    <p>Descripción del producto</p>
+                </div>
+            </div>
+        </section>
     </main>
     <!-- FIN DEL MAIN -->
 
@@ -177,7 +145,7 @@
     <footer>
         <img src="../img/logo-negro-chico.png" alt="">
         <div>
-            <h3>Día A Día</h3>
+            <h5>Día A Día</h5>
             <ul>
                 <li>
                     <a href="">Nosotros</a>
@@ -188,7 +156,7 @@
             </ul>
         </div>
         <div>
-            <h3>Compras</h3>
+            <h5>Compras</h5>
             <ul>
                 <li>
                     <a href="">Como comprar</a>
@@ -202,7 +170,7 @@
             </ul>
         </div>
         <div>
-            <h3>Mi cuenta</h3>
+            <h5>Mi cuenta</h5>
             <ul>
                 <li>
                     <a href="">Acceder</a>
@@ -213,7 +181,7 @@
             </ul>
         </div>
         <div>
-            <h3>Seguinos en nuestras redes</h3>
+            <h5>Seguinos en nuestras redes</h5>
             <div id="contenedor-redes">
                 <a href="">
                     <img src="../img/facebook.png" alt="Logo de Facebook">
@@ -232,6 +200,14 @@
     <a href="#" id="logo-whatsapp">
         <img src="../img/whatsapp.png" alt="">
     </a>
+
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+        integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+        integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous">
+    </script>
 
 </body>
 
