Ajustes en media queries

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- Favicon -->
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
 
-    <title>Día A Día | Inicio</title>
+    <title>Inicio | Día A Día</title>
 
 </head>
 
@@ -84,23 +84,23 @@
     <main>
         <!-- Primer sección -->
         <section id="primer-seccion">
-            <div class="centrado-movil">
+            <div class="centrado-grande">
                 <div class="soluciones-fondo">
                     <h2>Soluciones gastronómicas</h2>
                 </div>
                 <div class="articulos-primer-seccion">
                     <article id="primer-articulo">
-                        <a href="">
+                        <a href="#">
                             <h2>Viandas individuales</h2>
                         </a>
                     </article>
                     <article id="segundo-articulo">
-                        <a href="">
+                        <a href="#">
                             <h2>Viandas para empresas</h2>
                         </a>
                     </article>
                     <article id="tercer-articulo">
-                        <a href="">
+                        <a href="#">
                             <h2>Servicio de catering</h2>
                         </a>
                     </article>
