--- a/pages/blog.html
+++ b/pages/blog.html
@@ -20,7 +20,7 @@
     <!-- Favicon -->
     <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
 
-    <title>Día A Día | Blog</title>
+    <title>Blog | Día A Día</title>
 
 </head>
 
@@ -29,7 +29,7 @@
     <header>
         <!-- Navbar Bootstrap -->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" id="logo" href="#">
+            <a class="navbar-brand" id="logo" href="../index.html">
                 <img src="../img/logo.png" alt="Logo de mi página">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -70,7 +70,7 @@
     <!-- MAIN -->
     <main>
         <!-- Sección portada -->
-        <section id="seccion-portada-blog">
+        <section id="portada-blog">
             <div class="centrado-movil">
                 <h1>¡Bienvenid@ a nuestro Blog!</h1>
                 <p>Tenemos muchas recetas, consejos útiles para hacer comidas súper sabrosas y saludables. Sí querés
