--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -19,7 +19,7 @@
     <!-- Favicon -->
     <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
 
-    <title>Día A Día | Contacto</title>
+    <title>Contacto | Día A Día</title>
 
 </head>
 
@@ -28,7 +28,7 @@
     <header>
         <!-- Navbar Bootstrap -->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" id="logo" href="#">
+            <a class="navbar-brand" id="logo" href="../index.html">
                 <img src="../img/logo.png" alt="Logo de mi página">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -68,10 +68,14 @@
 
     <!-- MAIN -->
     <main>
-        <section id="primer-seccion-contacto">
+        <!-- Portada -->
+        <section id="portada-contacto">
             <h1>Contactanos</h1>
         </section>
-        <section id="segunda-seccion-contacto">
+        <!-- Fin sección portada -->
+
+        <!-- Primer sección -->
+        <section id="primer-seccion-contacto">
             <div class="centrado-grande centrado-movil">
                 <div id="div-contacto">
                     <h2>Contacto</h2>
@@ -120,6 +124,7 @@
                 </form>
             </div>
         </section>
+        <!-- Fin primer sección -->
     </main>
     <!-- FIN DEL MAIN -->
 
