--- a/pages/menu.html
+++ b/pages/menu.html
@@ -19,7 +19,7 @@
     <!-- Favicon -->
     <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
 
-    <title>Día A Día | Menú</title>
+    <title>Menú | Día A Día</title>
 
 </head>
 
@@ -28,7 +28,7 @@
     <header>
         <!-- Navbar Bootstrap -->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" id="logo" href="#">
+            <a class="navbar-brand" id="logo" href="../index.html">
                 <img src="../img/logo.png" alt="Logo de mi página">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -68,8 +68,13 @@
 
     <!-- MAIN -->
     <main>
+        <!-- Portada -->
+        <section id="portada-menu">
+            <h1>Menú</h1>
+        </section>
+        <!-- Fin sección portada -->
+
         <!-- Primer sección -->
-        <h1>Menú</h1>
         <section id="primer-seccion-menu">
             <div class="centrado-grande">
                 <figure class="grid-item1">
