--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -19,7 +19,7 @@
     <!-- Favicon -->
     <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
 
-    <title>Día A Día | Nosotros</title>
+    <title>Nosotros | Día A Día</title>
 
 </head>
 
@@ -28,7 +28,7 @@
     <header>
         <!-- Navbar Bootstrap -->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" id="logo" href="#">
+            <a class="navbar-brand" id="logo" href="../index.html">
                 <img src="../img/logo.png" alt="Logo de mi página">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -94,7 +94,9 @@
                     concepto de la comida casera, sabrosa y saludable.
                 </p>
             </div>
-            <div></div>
+            <figure>
+                <img src="../img/viandas-verdes.jpg" alt="Viandas de color verde de Día a Día">
+            </figure>
         </section>
 
         <!-- Acordeón Bootstrap -->
