--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -20,7 +20,7 @@
     <!-- Favicon -->
     <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
 
-    <title>Día A Día | Servicios</title>
+    <title>Servicios | Día A Día</title>
 
 </head>
 
@@ -29,7 +29,7 @@
     <header>
         <!-- Navbar Bootstrap -->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" id="logo" href="#">
+            <a class="navbar-brand" id="logo" href="../index.html">
                 <img src="../img/logo.png" alt="Logo de mi página">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -69,9 +69,13 @@
 
     <!-- MAIN -->
     <main>
-        <div id="portada-servicios">
+        <!-- Portada -->
+        <section id="portada-servicios">
             <h1>Nuestros servicios</h1>
-        </div>
+        </section>
+        <!-- Fin sección portada -->
+
+        <!-- Primer sección -->
         <section id="primer-seccion-servicios">
             <div class="centrado-mediano">
                 <article class="articulo-servicios1">
@@ -79,10 +83,9 @@
                         <img src="../img/vianda-roja.jpg" alt="">
                     </figure>
                     <h3>Servicio de viandas individuales</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita corporis doloremque quis porro
-                        quisquam, autem perferendis itaque tempore cum fugit nihil, vitae ipsa, harum numquam ea
-                        reiciendis
-                        dignissimos excepturi optio.</p>
+                    <p>Ya no tenés que preocuparte por el tiempo que invertís cocinando, nosotros lo hacemos por vos.
+                        Contamos con servicio de viandas individaules y/o familiares amplio y nutritivo para ayudarte a
+                        ahorrar tiempo.</p>
                     <input type="button" value="Conocer más..." class="boton-oscuro">
 
                 </article>
@@ -91,11 +94,9 @@
                         <img src="../img/vianda-empresas2.jpg" alt="">
                     </figure>
                     <h3>Servicio de viandas para empresas</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita corporis doloremque quis
-                        porro
-                        quisquam, autem perferendis itaque tempore cum fugit nihil, vitae ipsa, harum numquam ea
-                        reiciendis
-                        dignissimos excepturi optio.</p>
+                    <p>Brindamos un servicio semanal o mensual de propuestas gastronómicas para el almuerzo diario de
+                        tus trabajadores. Cuidamos la nutrición de tus empleados, incorporando alimentos de todos los
+                        grupos.</p>
                     <input type="button" value="Conocer más..." class="boton-oscuro">
 
                 </article>
@@ -104,11 +105,8 @@
                         <img src="../img/catering3.jpg" alt="">
                     </figure>
                     <h3>Servicio de catering</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita corporis doloremque quis
-                        porro
-                        quisquam, autem perferendis itaque tempore cum fugit nihil, vitae ipsa, harum numquam ea
-                        reiciendis
-                        dignissimos excepturi optio.</p>
+                    <p>Contamos con servicio de catering, con un variado menú a tu disposición, para hacer que tus
+                        fiestas o reuniones se destaquen.</p>
                     <input type="button" value="Conocer más..." class="boton-oscuro">
 
                 </article>
@@ -117,16 +115,14 @@
                         <img src="../img/smoothies.jpg" alt="">
                     </figure>
                     <h3>Servicio de bebidas saludables</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita corporis doloremque quis
-                        porro
-                        quisquam, autem perferendis itaque tempore cum fugit nihil, vitae ipsa, harum numquam ea
-                        reiciendis
-                        dignissimos excepturi optio.</p>
+                    <p>Para acompañar nuestras viandas te ofrecemos una amplia variedad de smoothies saludables,
+                        frutales, detox, y más, para que tus comidas sean más deliciosas y refrescantes.</p>
                     <input type="button" value="Conocer más..." class="boton-oscuro">
 
                 </article>
             </div>
         </section>
+        <!-- Fin primer sección -->
     </main>
     <!-- FIN DEL MAIN -->
 
